--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Pau Antúnez Clavero",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0"
